# practiceEPG

./: pyproject.toml
src/: config.py  db.py
src/models/: participant.py
